<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/day4Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day4Activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/fragBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentsProject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day4Btn"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/colorPickerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colorPickerBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragBtn"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/animationsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animationsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPickerBtn"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/flashBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flashBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationsBtn"
        app:layout_constraintVertical_bias="0.047" />

</androidx.constraintlayout.widget.ConstraintLayout>